[gd_scene load_steps=2 format=2]

[ext_resource path="res://Global.gd" type="Script" id=1]

[node name="Global" type="Node"]
script = ExtResource( 1 )

[node name="RegularMusic" type="AudioStreamPlayer" parent="."]

[node name="OrganMusic" type="AudioStreamPlayer" parent="."]

[node name="PointSound" type="AudioStreamPlayer" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]

[node name="BuyHabitSound" type="AudioStreamPlayer" parent="."]
